<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/L1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/alfa_et_NUMONE"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:hint="@string/enter_num_one"
        android:inputType="number"
        android:padding="20dp"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/alfa_et_NUMTWO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <EditText
        android:id="@+id/alfa_et_NUMTWO"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="132dp"
        android:gravity="center"
        android:hint="@string/enter_num_two"
        android:inputType="number"
        android:padding="20dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/alfa_tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/alfa_bt_calc"
        android:layout_width="114dp"
        android:layout_height="90dp"
        android:padding="10dp"
        android:text="@string/calc"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/alfa_tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alfa_et_NUMTWO"
        app:layout_constraintVertical_bias="0.467" />

    <TextView
        android:id="@+id/alfa_tv_result"
        android:layout_width="0dp"
        android:layout_height="420dp"
        android:layout_marginTop="280dp"
        android:background="#EE0E0E"
        android:gravity="clip_horizontal"
        android:paddingStart="80dp"
        android:paddingEnd="20dp"
        android:textColor="#0A0A0A"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>